k8s/app_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brandschutz-eder
  labels:
    app: brandschutz-eder
    environment: production
