k8s/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: brandschutz-eder
  name: brandschutz-eder-service
  namespace: brandschutz-eder
spec:
  type: ClusterIP
  selector:
    app: brandschutz-eder
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
