k8s/app_ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: brandschutz-eder-ingress
  namespace: brandschutz-eder
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`brandschutz-eder-backend.manuelpuchner.duckdns.org`)
      kind: Rule
      services:
        - name: brandschutz-eder-service
          port: 80
  tls:
    secretName: brandschutz-eder-tls
